--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -38,7 +38,7 @@
 \usepackage{svg}
 \usepackage{titlesec}
 \usepackage{tikz}
-  \usetikzlibrary{calc,fit,positioning,shadows.blur,tikzmark,arrows.meta,shapes,matrix}
+  \usetikzlibrary{backgrounds,calc,fit,positioning,shadows.blur,tikzmark,arrows.meta,shapes,matrix}
 \usepackage{tocbibind}
   \settocbibname{References}
 \usepackage{xcolor}
