--- a/assets/simd-scheme-i-data-layout.tex
+++ b/assets/simd-scheme-i-data-layout.tex
@@ -8,16 +8,146 @@ $$
 $$
 
 \begin{tikzpicture}[
+  show background rectangle,
   node distance=1cm and 0.1cm,
   vsstyle/.style={inner sep=0, outer sep=0, draw=gray, fill=dodgerblue4, text=white, minimum height=1cm, minimum width=2cm},
-  vstyle/.style={draw=gray, inner sep=0, outer sep=0, minimum height=1cm, minimum height=1cm, minimum width=2cm},
-  namestyle/.style={draw=none, minimum height=0, minimum width=1cm},
+  vstyle/.style={draw=gray, inner sep=0, outer sep=0, minimum height=1cm, minimum width=2cm},
+  namestyle/.style={draw=none, minimum height=1cm, minimum width=1cm},
+  m/.style={minimum height=0.5cm, minimum width=1cm, text height=1.5ex, text depth=0.25ex, yshift=0.5mm}, % Matrix entries
+  ml/.style={text=red, minimum width=1cm, anchor=base},
   dotstyle/.style={draw=none, minimum height=0, minimum width=0},
   pathstyle/.style={->}
 ]
 
-  \node[vstyle] (V1)
+% TODO: Use \coodinate instead of empty \node.
+  %%% Matrix
+
+  % Reference colummn to fix y-offset between rows. Shit's fucked.
+  \node[]                            (R0) {};
+  \node[] at ($(R0.south)+(0,-6mm)$) (R1) {};
+  \node[] at ($(R1.south)+(0,-4mm)$) (R2) {};
+  \node[] at ($(R2.south)+(0,-4mm)$) (R3) {};
+
+  % Col 0
+  \node[ml] (R0C0) at (R0)         {$$};
+  \node[m]  (R1C0) at (R1 -| R0C0) {$\cdots$};
+  \node[m]  (R2C0) at (R2 -| R0C0) {$\cdots$};
+  \node[m]  (R3C0) at (R3 -| R0C0) {$\cdots$};
+
+  % Col 1
+  \node[ml, right=of R0] (R0C1)                 {$s-1$};
+  \node[m]               (R1C1) at (R1 -| R0C1) {$0$};
+  \node[m]               (R2C1) at (R2 -| R0C1) {$\cdots$};
+  \node[m]               (R3C1) at (R3 -| R0C1) {$\cdots$};
+
+  % Col 2
+  \node[ml, right=of R0C1] (R0C2)                 {$s$};
+  \node[m]                 (R1C2) at (R1 -| R0C2) {$a_{r,s}$};
+  \node[m]                 (R2C2) at (R2 -| R0C2) {$0$};
+  \node[m]                 (R3C2) at (R3 -| R0C2) {$\cdots$};
+
+  % Col 3
+  \node[ml, right=of R0C2] (R0C3)                 {$s+1$};
+  \node[m]                 (R1C3) at (R1 -| R0C3) {$0$};
+  \node[m]                 (R2C3) at (R2 -| R0C3) {$a_{r+1, s+1}$};
+  \node[m]                 (R3C3) at (R3 -| R0C3) {$0$};
+
+  % Col 4
+  \node[ml, right=of R0C3] (R0C4)                 {$s+2$};
+  \node[m]                 (R1C4) at (R1 -| R0C4) {$\cdots$};
+  \node[m]                 (R2C4) at (R2 -| R0C4) {$0$};
+  \node[m]                 (R3C4) at (R3 -| R0C4) {$a_{r+2, s+2}$};
+
+  % Col 5
+  \node[ml, right=of R0C4] (R0C5)                 {$s+3$};
+  \node[m]                 (R1C5) at (R1 -| R0C5) {$\cdots$};
+  \node[m]                 (R2C5) at (R2 -| R0C5) {$\cdots$};
+  \node[m]                 (R3C5) at (R3 -| R0C5) {$0$};
+
+  % Col 6
+  \node[ml, right=of R0C5] (R0C6)                 {$\cdots$};
+  \node[m]                 (R1C6) at (R1 -| R0C6) {$\cdots$};
+  \node[m]                 (R2C6) at (R2 -| R0C6) {$\cdots$};
+  \node[m]                 (R3C6) at (R3 -| R0C6) {$\cdots$};
+
+  % Col 7
+  \node[ml, right=of R0C6] (R0C7)                 {$t$};
+  \node[m]                 (R1C7) at (R1 -| R0C7) {$a_{r,t}$};
+  \node[m]                 (R2C7) at (R2 -| R0C7) {$\cdots$};
+  \node[m]                 (R3C7) at (R3 -| R0C7) {$\cdots$};
+
+  % Col 8
+  \node[ml, right=of R0C7] (R0C8)                 {$t+1$};
+  \node[m]                 (R1C8) at (R1 -| R0C8) {$0$};
+  \node[m]                 (R2C8) at (R2 -| R0C8) {$a_{r+1, t+1}$};
+  \node[m]                 (R3C8) at (R3 -| R0C8) {$\cdots$};
+
+  % Col 9
+  \node[ml, right=of R0C8] (R0C9)                 {$t+2$};
+  \node[m]                 (R1C9) at (R1 -| R0C9) {$\cdots$};
+  \node[m]                 (R2C9) at (R2 -| R0C9) {$0$};
+  \node[m]                 (R3C9) at (R3 -| R0C9) {$a_{r+2,t+2}$};
+
+  % Col 10
+  \node[ml, right=of R0C9] (R0C10)                  {$t+3$};
+  \node[m]                 (R1C10) at (R1 -| R0C10) {$\cdots$};
+  \node[m]                 (R2C10) at (R2 -| R0C10) {$\cdots$};
+  \node[m]                 (R3C10) at (R3 -| R0C10) {$0$};
+
+  % Col 11
+  \node[ml, right=of R0C10] (R0C11)                  {$\cdots$};
+  \node[m]                  (R1C11) at (R1 -| R0C11) {$\cdots$};
+  \node[m]                  (R2C11) at (R2 -| R0C11) {$\cdots$};
+  \node[m]                  (R3C11) at (R3 -| R0C11) {$\cdots$};
+
+  % Col 12
+  \node[ml, right=of R0C11] (R0C12)                  {};
+  \node[ml]                 (R1C12) at (R1 -| R0C12) {$r$};
+  \node[ml]                 (R2C12) at (R2 -| R0C12) {$r+1$};
+  \node[ml]                 (R3C12) at (R3 -| R0C12) {$r+2$};
+
+  % Separator lines
+  \node (SEP-HORIZ-L) at ($(R0C0.south west)!0.5!(R1C0.north west)$) {};
+  \node (SEP-HORIZ-R) at (SEP-HORIZ-L -| R0C12.east) {};
+  \draw[draw=gray, line width=0.3mm] (SEP-HORIZ-L) -- (SEP-HORIZ-R);
+  \node (SEP-VERT-T) at ($(R0C11.north east)!0.5!(R0C12.north west)$) {};
+  \node (SEP-VERT-B) at (SEP-VERT-T |- R3C11.south east) {};
+  \draw[draw=gray, line width=0.3mm] (SEP-VERT-T) -- (SEP-VERT-B);
+
+  % matrix bounding box edges
+  \node (MAT-TL) at (R0C0.north west) {};
+  \node (MAT-BL) at (R3C0.south west) {};
+  \def\gutterThickness{5mm}
+  \def\gutterYPadding{2mm}
+  \def\gutterGap{2mm}
+  \def\gutterColor{gray}
+  \def\matrixDistToGutter{10mm} % Horizontal distance between matrix & gutter
+  \node (GUTTER-MAT-TR) at ($(MAT-TL)+(-\matrixDistToGutter,\gutterYPadding)$) {};
+  \node (GUTTER-MAT-BR-CHECKPT) at (GUTTER-MAT-TR |- MAT-BL) {};
+  \node (GUTTER-MAT-BR) at ($(GUTTER-MAT-BR-CHECKPT)+(0,-\gutterYPadding)$) {};
+  \node (GUTTER-MAT-BL) at ($(GUTTER-MAT-BR)+(-\gutterThickness,0)$) {};
+  \fill[fill=\gutterColor] (GUTTER-MAT-TR) rectangle (GUTTER-MAT-BL);
+  \node[text=white] at ($(GUTTER-MAT-TR)!0.5!(GUTTER-MAT-BL)$) {I};
+
+  %%% Data Layout
+
+  \def\dataDistToGutter{2mm}
+  \node (GUTTER-DATA-TR) at ($(GUTTER-MAT-BR)+(0,-\gutterGap)$) {};
+  \node[] (DATA-TL) at ($(GUTTER-DATA-TR)+(\dataDistToGutter,-\gutterYPadding)$) {};
+
+  \node[namestyle, anchor=north west] at (DATA-TL) (VNAME)
+    {V};
+  \node[namestyle, below=of VNAME] (VSNAME)
+    {VS};
+  \node[namestyle, below=of VSNAME] (JNAME)
+    {J};
+  \node[namestyle, below=of JNAME] (JSNAME)
+    {JS};
+  \node[namestyle, below=of JSNAME] (JPNAME)
+    {JP};
+  \node[vstyle, right=of VNAME] (V1)
     {$a_{r,s}$};
+
   \node[vstyle, right=of V1] (V2)
     {$a_{r,t}$};
   \node[dotstyle, right=2mm of V2] (V3)
@@ -63,17 +193,6 @@ $$
   \node[vstyle, right=of JP2] (JP3)
     {$s+2$};
 
-  \node[namestyle, left=of V1] (VNAME)
-    {V};
-  \node[namestyle, left=of VS1] (VSNAME)
-    {VS};
-  \node[namestyle, left=of J1] (JNAME)
-    {J};
-  \node[namestyle, left=of JS1] (JSNAME)
-    {JS};
-  \node[namestyle, left=of JP1] (JPNAME)
-    {JP};
-
   \draw[pathstyle] (VS1.north) |- ($(VS1.north)!0.5!(V1.south)$) -| (V1.south);
   \draw[pathstyle] (VS2.north) |- ($(VS2.north)!0.66!(V4.south)$) -| (V4.south);
   \draw[pathstyle] (VS3.north) |- ($(VS3.north)!0.33!(V7.south)$) -| (V7.south);
@@ -81,6 +200,32 @@ $$
   \draw[pathstyle] (JS1.north) |- ($(JS1.north)!0.25!(J1.south)$) -| ($(J1.south)-(3mm,0)$);
   \draw[pathstyle] (JS2.north) |- ($(JS2.north)!0.50!(J1.south)$) -| ($(J1.south)-(0mm,0)$);
   \draw[pathstyle] (JS3.north) |- ($(JS3.north)!0.75!(J1.south)$) -| ($(J1.south)+(3mm,0)$);
+
+  %% Data gutter
+
+  \node (DATA-BL) at (JPNAME.south west -| DATA-TL) {};
+  \node (GUTTER-DATA-BR-CHECKPT) at (GUTTER-DATA-TR |- DATA-BL) {};
+  \node (GUTTER-DATA-BR) at ($(GUTTER-DATA-BR-CHECKPT)+(0, -\gutterYPadding)$) {};
+  \node (GUTTER-DATA-BL) at ($(GUTTER-DATA-BR)+(-\gutterThickness, 0)$) {};
+  \fill[fill=\gutterColor] (GUTTER-DATA-TR) rectangle (GUTTER-DATA-BL);
+  \node[text=white] (GUTTER-II) at ($(GUTTER-DATA-BL)!0.5!(GUTTER-DATA-TR)$) {II};
+
+   % \fill[fill=\gutterColor] 
+%   \def\gutterThickness{5mm}
+%   \def\gutterYPadding{2mm}
+%   \def\gutterGap{2mm}
+%   \node (GUTTER-MAT-TR) at ($(R0C0.north west)+(0,\gutterYPadding)$) {};
+%   \node (GUTTER-MAT-BL) at ($(R3C0.south west)-(\gutterThickness,\gutterYPadding)$) {};
+%   \node (GUTTER-MAT-BR) at ($(GUTTER-MAT-BL)+(\gutterThickness,0)$) {};
+%   \fill[fill=gray] (GUTTER-MAT-TR) rectangle (GUTTER-MAT-BL);
+%   \node[text=white] at ($(GUTTER-MAT-TR)!0.5!(GUTTER-MAT-BL)$) {I};
+% 
+%   %%% Data Layout
+% 
+%   \node (GUTTER-DATA-TR) at ($(GUTTER-MAT-BR)+(0,-\gutterGap)$) {};
+%   \node[] (DATA-TL) at ($(GUTTER-DATA-TR)+(0,-\gutterYPadding)$) {};
+
+
 \end{tikzpicture}
 
 $$
