--- a/assets/simd-scheme-i-data-layout.tex
+++ b/assets/simd-scheme-i-data-layout.tex
@@ -14,7 +14,7 @@ $$
   vstyle/.style={draw=gray, inner sep=0, outer sep=0, minimum height=1cm, minimum width=2cm},
   namestyle/.style={draw=none, minimum height=1cm, minimum width=1cm},
   m/.style={minimum height=0.5cm, minimum width=1cm, text height=1.5ex, text depth=0.25ex, yshift=0.5mm}, % Matrix entries
-  ml/.style={text=red, minimum width=1cm, anchor=base},
+  ml/.style={text=red, minimum height=0.5cm, minimum width=1cm, anchor=base},
   dotstyle/.style={draw=none, minimum height=0, minimum width=0},
   pathstyle/.style={->}
 ]
@@ -22,23 +22,30 @@ $$
 % TODO: Use \coodinate instead of empty \node.
   %%% Matrix
 
+  \def\gutterThickness{5mm} % width of gutter
+  \def\gutterYPadding{2mm} % Vertical extension of gutter beyond heigh of its section's content
+  \def\gutterGap{2mm} % Vertical gap between gutter sections
+  \def\gutterColor{gray} % Gutter fill color
+  \def\matrixDistToGutter{10mm} % Horizontal distance between matrix & gutter
+  \def\schemeDistToGutter{5mm} % Horizontal distance between scheme & gutter
+
   % Reference colummn to fix y-offset between rows. Shit's fucked.
-  \node[]                            (R0) {};
-  \node[] at ($(R0.south)+(0,-6mm)$) (R1) {};
-  \node[] at ($(R1.south)+(0,-4mm)$) (R2) {};
-  \node[] at ($(R2.south)+(0,-4mm)$) (R3) {};
+  \node[] (R0)                            {};
+  \node[] (R1) at ($(R0.south)+(0,-6mm)$) {};
+  \node[] (R2) at ($(R1.south)+(0,-4mm)$) {};
+  \node[] (R3) at ($(R2.south)+(0,-4mm)$) {};
 
   % Col 0
-  \node[ml] (R0C0) at (R0)         {$$};
+  \node[ml] (R0C0) at (R0)         {$\cdots$};
   \node[m]  (R1C0) at (R1 -| R0C0) {$\cdots$};
   \node[m]  (R2C0) at (R2 -| R0C0) {$\cdots$};
   \node[m]  (R3C0) at (R3 -| R0C0) {$\cdots$};
 
   % Col 1
-  \node[ml, right=of R0] (R0C1)                 {$s-1$};
-  \node[m]               (R1C1) at (R1 -| R0C1) {$0$};
-  \node[m]               (R2C1) at (R2 -| R0C1) {$\cdots$};
-  \node[m]               (R3C1) at (R3 -| R0C1) {$\cdots$};
+  \node[ml, right=of R0C0] (R0C1)                 {$s-1$};
+  \node[m]                 (R1C1) at (R1 -| R0C1) {$0$};
+  \node[m]                 (R2C1) at (R2 -| R0C1) {$\cdots$};
+  \node[m]                 (R3C1) at (R3 -| R0C1) {$\cdots$};
 
   % Col 2
   \node[ml, right=of R0C1] (R0C2)                 {$s$};
@@ -117,11 +124,6 @@ $$
   % matrix bounding box edges
   \node (MAT-TL) at (R0C0.north west) {};
   \node (MAT-BL) at (R3C0.south west) {};
-  \def\gutterThickness{5mm}
-  \def\gutterYPadding{2mm}
-  \def\gutterGap{2mm}
-  \def\gutterColor{gray}
-  \def\matrixDistToGutter{10mm} % Horizontal distance between matrix & gutter
   \node (GUTTER-MAT-TR) at ($(MAT-TL)+(-\matrixDistToGutter,\gutterYPadding)$) {};
   \node (GUTTER-MAT-BR-CHECKPT) at (GUTTER-MAT-TR |- MAT-BL) {};
   \node (GUTTER-MAT-BR) at ($(GUTTER-MAT-BR-CHECKPT)+(0,-\gutterYPadding)$) {};
@@ -210,52 +212,44 @@ $$
   \fill[fill=\gutterColor] (GUTTER-DATA-TR) rectangle (GUTTER-DATA-BL);
   \node[text=white] (GUTTER-II) at ($(GUTTER-DATA-BL)!0.5!(GUTTER-DATA-TR)$) {II};
 
-   % \fill[fill=\gutterColor] 
-%   \def\gutterThickness{5mm}
-%   \def\gutterYPadding{2mm}
-%   \def\gutterGap{2mm}
-%   \node (GUTTER-MAT-TR) at ($(R0C0.north west)+(0,\gutterYPadding)$) {};
-%   \node (GUTTER-MAT-BL) at ($(R3C0.south west)-(\gutterThickness,\gutterYPadding)$) {};
-%   \node (GUTTER-MAT-BR) at ($(GUTTER-MAT-BL)+(\gutterThickness,0)$) {};
-%   \fill[fill=gray] (GUTTER-MAT-TR) rectangle (GUTTER-MAT-BL);
-%   \node[text=white] at ($(GUTTER-MAT-TR)!0.5!(GUTTER-MAT-BL)$) {I};
-% 
-%   %%% Data Layout
-% 
-%   \node (GUTTER-DATA-TR) at ($(GUTTER-MAT-BR)+(0,-\gutterGap)$) {};
-%   \node[] (DATA-TL) at ($(GUTTER-DATA-TR)+(0,-\gutterYPadding)$) {};
+  \node (GUTTER-SCHEME-TR) at ($(GUTTER-DATA-BR)-(0,\gutterGap)$) {};
+  \node[anchor=north west] (SCHEME-TL) at ($(GUTTER-SCHEME-TR)+(\matrixDistToGutter,-\gutterYPadding)$) {
+    $
+    \begin{matrix}
+      \begin{bmatrix}
+        a_{r,s}     \\
+        a_{r+1,s+1} \\
+           \vdots   \\
+        a_{r+k,s+k} \\
+      \end{bmatrix} & \cdot & \begin{bmatrix}
+                                x_s      \\
+                                x_{s+1}  \\
+                                  \vdots \\
+                                x_{s+k}  \\
+                              \end{bmatrix} & + & \begin{bmatrix}
+                                                  a_{r,t}     \\
+                                                  a_{r+1,t+1} \\
+                                                    \vdots    \\
+                                                  a_{r+k,t+k} \\
+                                                  \end{bmatrix} & \cdot & \begin{bmatrix}
+                                                                            x_t \\
+                                                                            x_{t+1} \\
+                                                                            \vdots \\
+                                                                            x_{t+k}
+                                                                          \end{bmatrix} & + & \cdots & = \begin{bmatrix}
+                                                                                                             y_{r} \\
+                                                                                                             y_{r+1} \\
+                                                                                                             \vdots \\
+                                                                                                             y_{r+k}
+                                                                                                            \end{bmatrix}\\
 
+    \end{matrix}
+    $
+    };
 
+    \node (GUTTER-SCHEME-BR-CHECKPT) at (GUTTER-SCHEME-TR |- SCHEME-TL.south) {};
+    \node (GUTTER-SCHEME-BR) at ($(GUTTER-SCHEME-BR-CHECKPT)-(0, \gutterYPadding)$) {};
+    \node (GUTTER-SCHEME-BL) at ($(GUTTER-SCHEME-BR)-(\gutterThickness, 0)$) {};
+    \fill [fill=\gutterColor] (GUTTER-SCHEME-TR) rectangle (GUTTER-SCHEME-BL);
+    \node[text=white] (GUTTER-III) at ($(GUTTER-SCHEME-TR)!0.5!(GUTTER-SCHEME-BL)$) {III};
 \end{tikzpicture}
-
-$$
-\begin{matrix}
-  \begin{bmatrix}
-    a_{r,s}     \\
-    a_{r+1,s+1} \\
-       \vdots   \\
-    a_{r+k,s+k} \\
-  \end{bmatrix} & \cdot & \begin{bmatrix}
-                            x_s      \\
-                            x_{s+1}  \\
-                              \vdots \\
-                            x_{s+k}  \\
-                          \end{bmatrix} & + & \begin{bmatrix}
-                                              a_{r,t}     \\
-                                              a_{r+1,t+1} \\
-                                                \vdots    \\
-                                              a_{r+k,t+k} \\
-                                              \end{bmatrix} & \cdot & \begin{bmatrix}
-                                                                        x_t \\
-                                                                        x_{t+1} \\
-                                                                        \vdots \\
-                                                                        x_{t+k}
-                                                                      \end{bmatrix} & + & \cdots & = \begin{bmatrix}
-                                                                                                         y_{r} \\
-                                                                                                         y_{r+1} \\
-                                                                                                         \vdots \\
-                                                                                                         y_{r+k}
-                                                                                                        \end{bmatrix}\\
-
-\end{matrix}
-$$
