--- a/assets/simd-scheme-i-data-layout.tex
+++ b/assets/simd-scheme-i-data-layout.tex
@@ -1,12 +1,3 @@
-$$
-\begin{bNiceMatrix}[first-row, last-col=13, code-for-first-row=\color{blue}, code-for-last-col=\color{blue}]
-         & s-1    & s       & s+1         & s+ 2        & s+ 3   &        & t       & t+1         & t+2         & t+3    &        & \\
-\cdots   & 0      & a_{r,s} & 0           & \cdots      & \cdots & \cdots & a_{r,t} & 0           & \cdots      & \cdots & \cdots & r     \\
-\cdots   & \cdots & 0       & a_{r+1,s+1} & 0           & \cdots & \cdots & \cdots  & a_{r+1,t+1} & 0           & \cdots & \cdots & r+1   \\
-\cdots   & \cdots & \cdots  & 0           & a_{r+2,s+2} & 0      & \cdots & \cdots  & \cdots      & a_{r+2,t+2} & 0      & \cdots & r+ 2  \\
-\end{bNiceMatrix}
-$$
-
 \begin{tikzpicture}[
   show background rectangle,
   node distance=1cm and 0.1cm,
@@ -19,7 +10,6 @@ $$
   pathstyle/.style={->}
 ]
 
-% TODO: Use \coodinate instead of empty \node.
   %%% Matrix
 
   \def\gutterThickness{5mm} % width of gutter
@@ -27,7 +17,7 @@ $$
   \def\gutterGap{2mm} % Vertical gap between gutter sections
   \def\gutterColor{gray} % Gutter fill color
   \def\matrixDistToGutter{10mm} % Horizontal distance between matrix & gutter
-  \def\schemeDistToGutter{5mm} % Horizontal distance between scheme & gutter
+  \def\schemeDistToGutter{10mm} % Horizontal distance between scheme & gutter
 
   % Reference colummn to fix y-offset between rows. Shit's fucked.
   \node[] (R0)                            {};
@@ -147,9 +137,9 @@ $$
     {JS};
   \node[namestyle, below=of JSNAME] (JPNAME)
     {JP};
+
   \node[vstyle, right=of VNAME] (V1)
     {$a_{r,s}$};
-
   \node[vstyle, right=of V1] (V2)
     {$a_{r,t}$};
   \node[dotstyle, right=2mm of V2] (V3)
@@ -213,7 +203,7 @@ $$
   \node[text=white] (GUTTER-II) at ($(GUTTER-DATA-BL)!0.5!(GUTTER-DATA-TR)$) {II};
 
   \node (GUTTER-SCHEME-TR) at ($(GUTTER-DATA-BR)-(0,\gutterGap)$) {};
-  \node[anchor=north west] (SCHEME-TL) at ($(GUTTER-SCHEME-TR)+(\matrixDistToGutter,-\gutterYPadding)$) {
+  \node[anchor=north west] (SCHEME-TL) at ($(GUTTER-SCHEME-TR)+(\schemeDistToGutter,-\gutterYPadding)$) {
     $
     \begin{matrix}
       \begin{bmatrix}
