--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -99,7 +99,9 @@
 
   \todo[FINAL]{Seitenlayout für Druck anpassen}
   \todo[FINAL]{Bindestriche zwischen 'CSR/C3SR' und 'format' vereinheitlichen}
+  \todo[FINAL]{Schreibweise der Arrays vereinheitlichen}
   \todo[FINAL]{non-zero vs nonzero}
+  \todo{Subsubsection \& Paragraph stylistisch trennen}
   \todos
 
 \end{document}
